@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lockfile-progs/Attic/lockfile-progs-0.1.13.ebuild,v 1.2 2009/12/23 14:24:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lockfile-progs/Attic/lockfile-progs-0.1.13.ebuild,v 1.3 2010/02/05 18:06:26 armin76 Exp $
 
 EAPI="2"
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://debian/pool/main/l/${PN}/${PN}_${PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 x86"
 IUSE=""
 
 DEPEND="net-libs/liblockfile"
