@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/lockfile-progs
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lockfile-progs/ChangeLog,v 1.1 2009/12/18 17:37:05 phajdan.jr Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lockfile-progs/ChangeLog,v 1.2 2010/02/05 18:06:26 armin76 Exp $
+
+  05 Feb 2010; Raúl Porcel <armin76@gentoo.org>
+  lockfile-progs-0.1.13.ebuild:
+  x86 stable wrt #302470
 
   18 Dec 2009; Pawel Hajdan jr <phajdan.jr@gentoo.org> +files/Makefile,
   +metadata.xml:
